--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/i-ces/BinaryBeasts#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "nodemon": "^2.0.2"
