--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/server.js"
+    "server": "nodemon server/server.js",
+    "node_1": "nodemon --watch dev -e js blockchain/networkNode.js 3001 http://localhost:3001",
+    "node_2": "nodemon --watch dev -e js blockchain/networkNode.js 3002 http://localhost:3002",
+    "node_3": "nodemon --watch dev -e js blockchain/networkNode.js 3003 http://localhost:3003"
   },
   "repository": {
     "type": "git",
@@ -19,8 +22,12 @@
   "homepage": "https://github.com/i-ces/BinaryBeasts#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "request-promise": "^4.2.5",
+    "sha256": "^0.2.0",
+    "uuid": "^3.4.0"
   }
 }
